--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Al-Quran Indonesia",
+  "name": "Al-Qur'an Indonesia",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://cdn-icons-png.flaticon.com/512/2230/2230267.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2230/2230267.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2230/2230267.png",
       "type": "image/png",
       "sizes": "512x512"
     }
